2007-12-07  Guillem Jover  <guillem.jover@nokia.com>

	* client/Makefile.am (PIE): Remove variable.
	(maemo_client_CPPFLAGS): Add $(PIC).
	(maemo_client_LDFLAGS): Rename $(PIE) to $(PIC). Add '-shared'.

2007-12-07  Guillem Jover  <guillem.jover@nokia.com>

	* client/client.c: Rewrite for Hildon 1.x.

2007-12-04  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac (DBUS_CFLAGS, DBUS_LIBS, CLIENT_CFLAGS, CLIENT_LIBS)
	(BOOSTER_GTK_CFLAGS, BOOSTER_GTK_LIBS): Remove redundant variables.

2007-12-04  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.27~.

2007-10-03  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.26.

2007-10-03  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/Makefile.am (dist_pkgconfig_DATA): Rename to ...
	(pkgconfig_DATA): ... this.
	(dist_man_MANS): Rename to ...
	(man_MANS): ... this.
	(EXTRA_DIST): New variable.

2007-10-03  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (alloc_childs): Free childs in case the malloc
	for childs->list failed.

2007-10-03  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.26~.

2007-09-25  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.25.

2007-09-25  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac [hildon_booster] (BOOSTER_GTK_LIBS): Do not link
	against libstdc++ anymore.

2007-09-25  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.25~.

2007-09-10  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (fs_init): New function.
	(invoked_init): Move umask call to ...
	(fs_init): ... here.
	(daemonize): Move chdir call to ...
	(fs_init): ... here.
	(invoked_init): Move rise_oom_defense call to ...
	(main): ... here. Call fs_init after env_init.

2007-08-30  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.24.

2007-08-30  Guillem Jover  <guillem.jover@nokia.com>

	* README: Cleanup.
